# work

./: README.md
cv_classification/cifar10/: one_test.py  show_img.py
cv_classification/examples/alexnet/: init.sh  predict.py
cv_classification/examples/data_set/: README.md
cv_classification/examples/rgb2b/: rgb2l.py
cv_classification/iris_data/: TransformerModel.py  bp_network.py  dataloader_TransformerModel.py  sklearn_lr.py
cv_classification/mnist/: examply.py  test_one.py  two_test.py
cv_classification/test/0_1_classification/: SimpleClassifier.py  lstm.py
python_package/pyinstaller/: hello.py
python_package/there_test/: README.md  setup.py
python_package/two_test/: README.md  setup.py
python_package/two_test/helloapp/: hello.py
python_package/two_test/myapp/: myapp.py
study/cmvn_subsamling/: build.sh  cmvn_mean.pt  kernel.cu  run.sh  setup.py  test.cpp  test.py
study/cmvn_subsamling/cmvn/: cmvn_input.pt  cmvn_istd.pt  cmvn_output.pt  kernel.cu  setup.py  test.cpp  test.py
study/cmvn_subsamling/subsampling_fp16/: run.sh  setup.py  test.py  unit_test.cpp
study/cmvn_subsamling/subsampling_int8/: run.sh  setup.py  test.py  unit_test.cpp
study/concat/: kernel.cu  setup.py  test.py  unit_test.cpp
study/conv_module/: depthwise_test.py  kernel.cu  pointwise2_test.py  pointwise_test.py  run.sh  setup.py  test_all.py  test_conv_glu.py  test_glu.py  transformerKernels_int8_ix.h  unit_test.cpp
study/gemm/: kernel.cu  setup.py  test.py  unit_test.cpp
study/gemm/pure_gemm/: weight_2.cu
study/gemm/test_fp16/: kernel.cu  test.py  unit_test.cpp
study/pad_gather2_transpose/: kernel.cu  setup.py  test.py  unit_test.cpp
study/pad_gather2_transpose/012345to012435/: kernel.cu  setup.py  test.py  unit_test.cpp
study/padding/: input_conv.py  input_weight.py  readme.md
study/test_ixinfer/: CMakeLists.txt  README.MD  compare_cuinferConvlutionForwad.cpp  get_conv_shape.py  test_cuinferQDConvolutionForward.cpp  test_cuinferQDEConvolutionForward.cpp
study/test_ixinfer/cuinferQDC_test/: cpu_test.py  gpu_test_double.py  gpu_test_signal.py  readme.md  run.sh  setup.py  unit_test.cpp
study/tools/: ixfw-mr_50-1.0.3_x86_64.run  power-tool  set_mr50.sh
study/topk_handle/: encoder_mask.pt  kernel.cu  test.py  unit_test.cpp
(+92 files in other folders)
